jwt-filter.yaml
apiVersion: v1
kind: Service
metadata:
  name: jwt-filter-svc
spec:
  ports:
    - port: 80
      targetPort: 8086
  selector:
    app: jwt-filter-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-filter-deployment
spec:
  selector:
    matchLabels:
      app: jwt-filter-pod
  replicas: 1
  template:
    metadata:
      name: jwt-filter-pod
      labels:
        app: jwt-filter-pod
    spec:
      containers:
      - name: jwt-filter-pod
        image: pash7e7/project_jwt-filter
        ports:
        - containerPort: 8086
