mail.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-svc
spec:
  ports:
    - port: 80
      targetPort: 35000
  selector:
    app: mail-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-deployment
spec:
  selector:
    matchLabels:
      app: mail-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: mail-pod
    spec:
      containers:
      - name: mail-pod
        image: pash7e7/project_email
        ports:
        - containerPort: 35000
