rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  ports:
  - name: queue
    port: 80
    targetPort: 5672
  selector:
    app: rabbitmq-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: rabbitmq-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      containers:
      - name: rabbitmq-pod
        image: rabbitmq:3.9-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
