registration.yaml
apiVersion: v1
kind: Service
metadata:
  name: registration-svc
spec:
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: registration-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-deployment
spec:
  selector:
    matchLabels:
      app: registration-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: registration-pod
    spec:
      containers:
      - name: registration-pod
        image: pash7e7/project_registration
        ports:
        - containerPort: 8081
