schedule.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedule-svc
spec:
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: schedule-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-deployment
spec:
  selector:
    matchLabels:
      app: schedule-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: schedule-pod
    spec:
      containers:
      - name: schedule-pod
        image: pash7e7/project_schedule
        ports:
        - containerPort: 8083
