user-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-svc
spec:
  ports:
    - port: 80
      targetPort: 5432
  selector:
    app: user-postgres-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-deployment
spec:
  selector:
    matchLabels:
      app: user-postgres-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: user-postgres-pod
    spec:
      containers:
      - name: user-postgres-pod
        image: postgres:14.2-alpine
        ports:
          - containerPort: 5432
