user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: user-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: user-pod
    spec:
      containers:
      - name: user-pod
        image: pash7e7/project_user
        ports:
        - containerPort: 8080
