unprotected_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unprotected-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    # nginx.ingress.kubernetes.io/auth-url: "http://app.example.com/jwt-filter"
spec:
  rules:
   - host: app.example.com
     http:
        paths:
          - pathType: Prefix
            path: /registration
            backend:
              service:
                name: registration-svc
                port: 
                  number: 80
          - pathType: Prefix
            path: /jwt
            backend:
              service:
                name: jwt-svc
                port: 
                  number: 80
          - pathType: Exact
            path: /
            backend:
              service:
                name: jwt-filter-svc
                port: 
                  number: 80
